--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="action_settings">Settings</string>
 
     //FACEBOOK LOGIN
-    <string name="facebook_app_id">280688182359419</string>
-    <string name="loading">Loading</string>
-    <string name="action_logout"> Log Out</string>
+    <string name="facebook_application_id" translatable="false">280688182359419</string>
+    <string name="facebook_login_protocol_scheme" translatable="false">280688182359419</string>
+
 </resources>
